# web-hw10

./: LICENSE  README.md  pyproject.toml
hw_quotes/hw_quotes/: settings.py  urls.py
hw_quotes/quotes/: admin.py  models.py  urls.py  views.py
hw_quotes/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_quotes/quotes/static/quotes/: style.css
hw_quotes/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html
hw_quotes/users/: forms.py  urls.py  views.py
hw_quotes/users/templates/users/: signin.html  signup.html
hw_quotes/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
